# substrate-mcp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
src/tooling/: substrate.rs
src/tools/: substrate.rs
