[package]
name = "substrate-mcp-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "transport-io",
] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.39", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
subxt = { version = "0.41", features = ["native"] }
subxt-signer = "0.41"
hex = "0.4"
