[package]
name = "substrate-mcp-rs"
version = "0.1.0"
edition = "2024"
authors = ["Thomas Marches <thomas.marches@epitech.eu>"]
description = "A Model Context Protocol (MCP) server for interacting with Substrate blockchains, written in Rust."
license = "MIT"
repository = "https://github.com/ThomasMarches/substrate-mcp-rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "transport-io",
] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
subxt = { version = "0.42", features = ["native"] }
subxt-signer = "0.42"
hex = "0.4"
dotenv = "0.15"
